--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,104 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  color: #fff;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+h2 {
+  margin-bottom: 25px;
+}
+
 body {
   background-color: #2c2c2c;
+}
+
+#main-container {
+  background-color: #242424;
+  position: relative;
+  max-width: 50%;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 30px;
+  margin-top: 5vh;
+}
+
+#add-container {
+  margin-bottom: 20px;
+  padding-bottom: 20px;
+  border-bottom: 1px solid #444;
+}
+
+#add-container input, #add-container button {
+  padding: 10px;
+  background-color: #393939;
+  border: none;
+  width: 80%;
+  display: inline-block;
+}
+
+#add-container button {
+  width: 18%;
+  cursor: pointer;
+  transition: 0.5s;
+}
+#add-container button:hover {
+  background-color: #ff7066;
+}
+#add-container button:hover > i {
+  color: #242424;
+}
+
+#add-container button i {
+  color: #ff7066;
+}
+
+/*Tasks container*/
+.task {
+  margin-bottom: 15px;
+  padding-bottom: 15px;
+  border-bottom: 1px solid #444;
+  positon: relative;
+}
+.task:hover .fa-trash {
+  display: block;
+}
+
+.hide {
+  display: none;
+}
+
+.fa.fa-check {
+  border-radius: 50%;
+  border: 1px solid #444;
+  padding: 7px;
+  margin-right: 10px;
+  cursor: pointer;
+}
+.fa.fa-check.done {
+  color: #0dd657;
+  border: 1px solid #0dd657;
+}
+.fa.fa-check:hover {
+  color: #ff7066;
+  border: 1px solid #ff7066;
+}
+
+.fa.fa-trash {
+  position: absolute;
+  right: 30px;
+  top: 220px;
+  cursor: pointer;
+  display: none;
+}
+.fa.fa-trash:hover {
+  color: #ff7066;
+  border: #ff7066;
+}
+
+#empty-staks {
+  text-align: center;
 }
 
 /*# sourceMappingURL=styles.css.map */
