--- a/sass/reset.sass
+++ b/sass/reset.sass
@@ -1,3 +1,4 @@
+@import 'colors'
 *
     margin: 0
     padding: 0
@@ -5,6 +6,9 @@
     color: #fff
     font-family: Arial, Helvetica, sans-serif
  
+
+body
+    background-color: $cor-general-background
 
 h2
     margin-bottom: 25px
