--- a/sass/styles.sass
+++ b/sass/styles.sass
@@ -2,8 +2,6 @@
 @import 'colors'
 
 
-body
-    background-color: $cor-general-background
 
 #main-container
     background-color: $cor-screen
@@ -47,7 +45,7 @@ body
     margin-bottom: 15px
     padding-bottom: 15px
     border-bottom: 1px solid #444
-    positon: relative
+    position: relative
    
 
     &:hover .fa-trash
@@ -73,8 +71,8 @@ body
 
 .fa.fa-trash
     position: absolute
-    right: 30px
-    top: 220px
+    right: 10px
+    top: 10px
     cursor: pointer
     display: none
 
