--- a/css/styles.css
+++ b/css/styles.css
@@ -6,12 +6,12 @@
   font-family: Arial, Helvetica, sans-serif;
 }
 
-h2 {
-  margin-bottom: 25px;
-}
-
 body {
   background-color: #2c2c2c;
+}
+
+h2 {
+  margin-bottom: 25px;
 }
 
 #main-container {
@@ -59,7 +59,7 @@ body {
   margin-bottom: 15px;
   padding-bottom: 15px;
   border-bottom: 1px solid #444;
-  positon: relative;
+  position: relative;
 }
 .task:hover .fa-trash {
   display: block;
@@ -87,8 +87,8 @@ body {
 
 .fa.fa-trash {
   position: absolute;
-  right: 30px;
-  top: 220px;
+  right: 10px;
+  top: 10px;
   cursor: pointer;
   display: none;
 }
